added xml parser for itunes library

--- a/music_analysis.ipynb
+++ b/music_analysis.ipynb
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 371,
+   "execution_count": 697,
    "metadata": {
     "collapsed": false
    },
@@ -190,12 +190,14 @@
     "    value = db[song_title]\n",
     "    value.update(song_val)\n",
     "    db[song_title] = value\n",
-    "    print 'Saved', song_title, db[song_title]\n",
+    "    print 'Saved', song_title\n",
     "            \n",
     "def check_data_in_db(db):\n",
     "    \"\"\" Look for new songs in the DB and get \n",
     "    song attributes from the Echo Nest library.\n",
     "    \"\"\"\n",
+    "    from time import sleep\n",
+    "    \n",
     "    for song_title, value in db.iteritems():\n",
     "        # Check if the attributes have been added\n",
     "        if value.get('tempo') or value.get('No_data'): \n",
@@ -208,11 +210,13 @@
     "            if song_data:\n",
     "                add_song_data_to_db(song_title, \n",
     "                                    song_data, db)\n",
+    "                sleep(8)\n",
     "            # If not, I add 'No_data' tag for the song. \n",
     "            else:\n",
     "                song_val = {'No_data' : True}\n",
     "                value.update(song_val)\n",
-    "                db[song_title] = value"
+    "                db[song_title] = value\n",
+    "                sleep(10)"
    ]
   },
   {
@@ -220,7 +224,7 @@
    "execution_count": 398,
    "metadata": {
     "collapsed": false,
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -237,8 +241,77 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Test dataset\n",
+    "\n",
+    "To parse my iTunes library xml file I used pyItunes module, which saved me hours of time. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 391,
+   "execution_count": 693,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "xml_file = 'itunes_library.xml'\n",
+    "# DB with songs from iTunes library\n",
+    "idb = SqliteDict('./itunes_tracks', autocommit=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 694,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def get_itunes_song(song):\n",
+    "    \"\"\"check the validity of the song, \n",
+    "    exclude podcasts and songs \n",
+    "    missing artist's name.\n",
+    "    \"\"\"\n",
+    "    if (song.genre == 'Podcast' or \n",
+    "        song.genre == u'iTunes U'): \n",
+    "        return None \n",
+    "    elif song.kind != 'MPEG audio file': \n",
+    "        return None\n",
+    "    elif not song.artist: \n",
+    "        return None\n",
+    "    else:\n",
+    "        return song.name, song.artist\n",
+    "\n",
+    "def parse_itunes_xml(db, xml_file):\n",
+    "    from pyItunes import Library\n",
+    "    l = Library(xml_file)\n",
+    "    \n",
+    "    for id, song in l.songs.items():\n",
+    "        try:\n",
+    "            song_title, artist = get_itunes_song(song)\n",
+    "            if not db.get(song_title):\n",
+    "                db[song_title] = {'artist' : artist}\n",
+    "        except TypeError as e:\n",
+    "            continue"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 700,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "check_data_in_db(idb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 699,
    "metadata": {
     "collapsed": false
    },
@@ -247,7 +320,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "91\n"
+      "331\n"
      ]
     }
    ],
@@ -257,7 +330,7 @@
     "songs in the DB. \n",
     "\"\"\"\n",
     "count = 0\n",
-    "for k, v in db.iteritems():\n",
+    "for k, v in idb.iteritems():\n",
     "    if v.get('tempo'):\n",
     "        count += 1\n",
     "    else: continue\n",
@@ -1187,76 +1260,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Making predictions\n",
-    "We first load the test data."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 576,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# read xml with itunes music\n",
-    "xml_file = 'itunes_library.xml'\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "from bs4 import BeautifulSoup\n",
-    "soup = BeautifulSoup(open(xml_file), 'xml')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 577,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<Element 'dict' at 0x11527d690>\n"
-     ]
-    }
-   ],
-   "source": [
-    "import xml.etree.ElementTree as etree\n",
-    "tree = etree.parse(xml_file)\n",
-    "root = tree.getroot()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 586,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "els = [element for element in tree.findall('.//dict')]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 590,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "e = els[0]\n",
-    "e."
+    "#### Making predictions"
    ]
   },
   {
