finished NB#01, added NB #02

--- a/music_analysis.ipynb
+++ b/music_analysis.ipynb
@@ -352,9 +352,7 @@
    "source": [
     "## Data overview  \n",
     "  \n",
-    "Now I have two sets with song data. Next I read in data from both databases and take a look at what I'm working with.\n",
-    "\n",
-    "df is shorthand for \"dataframe\", which we can think of as an Excel-like table of values. Dataframes have various methods that can be called to easily learn about the data contained in them, and we'll step through calling some of these methods. Below, we see that we have 309 pairs of (year, activity) to examine..."
+    "Now I have two sets with song data. Next I read in data from both databases and take a look at what I'm working with."
    ]
   },
   {
@@ -369,7 +367,8 @@
     "    \"\"\" Read the DB and return \n",
     "    cleaned version.\n",
     "    \"\"\"\n",
-    "    # transpose data\n",
+    "    # transpose data to have dict keys (song names) \n",
+    "    # as index\n",
     "    df = pd.DataFrame(dict(db)).T\n",
     "    \n",
     "    # remove rows with no data for a song\n",
