--- a/00_Summary.ipynb
+++ b/00_Summary.ipynb
@@ -21,6 +21,9 @@
     "\n",
     "### 2. Analysis overview (How?)\n",
     "\n",
+    "I'm interested in three classes of music (\"cycling\", \"yoga\", \"ballet\") and I want to find tracks in my iTunes music library that fit these classes. To solve that problem I use machine learning classification algorithms.\n",
+    "The reason I chose these categories for the training dataset is that I wanted to have two very different groups of songs (\"yoga\" and \"cycling\") and one more alike group—focus—that might sound similar to the 'yoga' group but at the same time is very different for me. I'd like to find out what song attributes make that difference.\n",
+    "\n",
     "### 3. Installation notes\n",
     "This notebook requires the following packages:    \n",
     "* numpy version 1.5 or later: http://www.numpy.org/\n",
@@ -29,7 +32,7 @@
     "* matplotlib version 1.3 or later: http://matplotlib.org/\n",
     "* scikit-learn version 0.14 or later: http://scikit-learn.org\n",
     "* ipython version 2.0 or later, with notebook support: http://ipython.org\n",
-    "* seaborn version 0.6 or later: https://stanford.edu/~mwaskom/software/seaborn/#\n",
+    "* seaborn version 0.7.0 or later: https://stanford.edu/~mwaskom/software/seaborn/#\n",
     "* pyechonest version 9.0.0 or later: https://github.com/echonest/pyechonest\n",
     "* pyItunes library: https://github.com/liamks/pyitunes\n",
     "* sqlitedict library: https://github.com/piskvorky/sqlitedict\n",
