novelty detection by one class

--- a/01_Data_preparation.ipynb
+++ b/01_Data_preparation.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "This is the first post in a series of posts devoted to analysis of iTunes music library using Scikit-Learn tools.   \n",
     "This notebook covers data gathering and preparation and cleaning of the datasets I'm going to use in my analysis.\n",
-    "For the summary of this analysis, its goals, methods, and installation notes please go to [link](). \n",
+    "For the summary of this analysis, its goals, methods, and installation notes please go to [00_Summary](http://localhost:8888/notebooks/00_Summary.ipynb). \n",
     "\n",
     "## Preliminaries\n",
     "\n",
