--- a/00_Summary.ipynb
+++ b/00_Summary.ipynb
@@ -4,27 +4,44 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# iTunes music library analysis\n",
+    "# Machine Learning for music playlists\n",
     "\n",
-    "## A scientific way of creating playlists for fitness classes\n",
+    "## Creating music playlists in iTunes with Scikit-Learn tools\n",
     "— March 2016 —\n",
     "\n",
-    "### 1. Goals (Why?)\n",
-    "1.1. Explore the basics of Scikit-Learn tools, including:\n",
+    "### 1. Analysis overview\n",
+    "This is a series of posts devoted to analysis of iTunes music library using **[Scikit-Learn](http://scikit-learn.org)** tools and the **[Echo Nest API](http://the.echonest.com/)**.\n",
+    "\n",
+    "The purpose of the analysis is to detect tracks in my iTunes music library that would suit my fitness practices, which are \"cycling\", \"yoga\", and \"ballet\". The reason I chose these categories is that I wanted to have two very different classes of songs (\"yoga\" and \"cycling\") and one more alike class — \"ballet\" — that might float between the other two classes. I'd like to find out what attributes make that difference.   \n",
+    "\n",
+    "To solve that problem I use Scikit-Learn machine learning classification algorithms.\n",
+    "\n",
+    "\n",
+    "### 2. Goals\n",
+    "2.1. Build music playlists from my iTunes music library for my fitness practices.\n",
+    "\n",
+    "2.2. Explore the basics of Scikit-Learn tools, including:\n",
     "* Classification algorithms;\n",
-    "* Novelty detection;\n",
+    "* One-Class SVM for novelty detection;\n",
     "* Model validation;\n",
-    "* Dimesionality reduction. \n",
+    "* Data Standardization;\n",
+    "* Dimensionality reduction.\n",
     "\n",
-    "A good song for the practice gives mood, rhythm, flow to the class. \n",
+    "2.3. Explore the Echo Nest API and track attributes. \n",
     "\n",
+    "2.4. Document the learning process step-by-step for myself and for other newbies at data analysis. Please take into consideration that I'm a greenhorn not only at data analysis but also at Python. \n",
     "\n",
-    "### 2. Analysis overview (How?)\n",
+    "### 3. Contents\n",
+    "The series of posts includes the following notebooks:  \n",
+    "[00_Summary](http://localhost:8888/notebooks/00_Summary.ipynb) — Summary of this analysis, its goals and methods, installation notes.  \n",
+    "[01_Data_preparation](http://localhost:8888/notebooks/01_Data_preparation.ipynb) — Data gathering and cleaning.  \n",
+    "[02_Data_visualisation](http://localhost:8888/notebooks/02_Data_Visualisation.ipynb) — Visualisation and overview of data.  \n",
+    "[03_Preprocessing](http://localhost:8888/notebooks/03_Preprocessing.ipynb) — Data preprocessing to use it as input for Scikit-learn machine learning algorithms.  \n",
+    "[04_Novelty_detection](http://localhost:8888/notebooks/04_Novelty_detection.ipynb) — Apply One-Class SVM algorithm to identify matching tracks in the unlabeled dataset.  \n",
+    "[]()  \n",
+    "  \n",
     "\n",
-    "I'm interested in three classes of music (\"cycling\", \"yoga\", \"ballet\") and I want to find tracks in my iTunes music library that fit these classes. To solve that problem I use machine learning classification algorithms.\n",
-    "The reason I chose these categories for the training dataset is that I wanted to have two very different groups of songs (\"yoga\" and \"cycling\") and one more alike group—focus—that might sound similar to the 'yoga' group but at the same time is very different for me. I'd like to find out what song attributes make that difference.\n",
-    "\n",
-    "### 3. Installation notes\n",
+    "### 4. Installation notes\n",
     "This notebook requires the following packages:    \n",
     "* numpy version 1.5 or later: http://www.numpy.org/\n",
     "* pandas version 0.17.0 or later: http://pandas.pydata.org/\n",
@@ -36,21 +53,13 @@
     "* pyechonest version 9.0.0 or later: https://github.com/echonest/pyechonest\n",
     "* pyItunes library: https://github.com/liamks/pyitunes\n",
     "* sqlitedict library: https://github.com/piskvorky/sqlitedict\n",
+    "* HDF5 requires several libraries, detailed instructions for installation can be found in [this blog post](http://rustyrazorblade.com/2014/11/getting-started-with-pandas-and-hdf5/). \n",
     "\n",
     "### 4. Notebook listing\n",
     "You can view materials using the nbviewer service.\n",
     "\n",
     "Note, however, that you cannot modify or run the contents within nbviewer. To modify them, first download the repository, change to the notebooks directory, and run ipython notebook. For more information on the IPython notebook, see http://ipython.org/notebook.html"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
