--- a/01_Data_preparation.ipynb
+++ b/01_Data_preparation.ipynb
@@ -4,15 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# iTunes music library analysis: Data preparation\n",
+    "# 01. Machine Learning for music playlists: Data preparation\n",
     "\n",
     "This is the first post in a series of posts devoted to analysis of iTunes music library using Scikit-Learn tools.   \n",
     "This notebook covers data gathering and preparation and cleaning of the datasets I'm going to use in my analysis.\n",
     "For the summary of this analysis, its goals, methods, and installation notes please go to [00_Summary](http://localhost:8888/notebooks/00_Summary.ipynb). \n",
     "\n",
+    "In this analysis I'm interested in three classes of music (\"cycling\", \"yoga\", \"ballet\") and I want to find tracks in my iTunes music library that fit these classes. This is a multiclass classification problem. Classification is the task of predicting the value of a categorical variable given some input variables (the features). \n",
+    "\n",
+    "To solve that problem I use *supervised machine learning classification algorithms*.  \n",
+    "\n",
+    "Supervised machine learning is about creating models from data: a model learns from training data (data with class labels), and can be used to predict the result of test data (data without class labels). Thus the task of supervised learning is to construct an estimator which is able to predict the label of an object given the set of features. We can also think of classification as a function estimation problem where the function that we want to estimate separates the classes.\n",
+    "\n",
     "## Preliminaries\n",
     "\n",
-    "One of the main goals of this analysis is to explore the basics of Scikit-Learn tools. **[Scikit-Learn](http://scikit-learn.org)** is a popular Python package designed to give access to well-known machine learning algorithms within Python code.\n",
+    "One of the main goals of this analysis is to explore the basics of Scikit-Learn tools. **[Scikit-Learn](http://scikit-learn.org)** is a popular Python package designed to give access to well-known machine learning algorithms within Python code. \n",
     "\n",
     "Scikit-Learn is built upon Python's **[NumPy (Numerical Python)](http://www.numpy.org/)** and **[SciPy (Scientific Python)](http://scipy.org/)** libraries, which enable efficient in-core numerical and scientific computation within Python. \n",
     "\n",
@@ -59,15 +65,8 @@
    },
    "source": [
     "## Data preparation\n",
-    "\n",
-    "In this analysis I'm dealing with classification problem. Classification is the task of predicting the value of a categorical variable given some input variables (the features). \n",
-    "\n",
-    "I'm interested in three classes of music (\"cycling\", \"yoga\", \"ballet\") and I want to find tracks in my iTunes music library that fit these classes. To solve that problem I use *supervised machine learning classification algorithms*.  \n",
-    "\n",
-    "Supervised machine learning is about creating models from data: a model learns from training data (data with class labels), and can be used to predict the result of test data (data without class labels). Thus the task of supervised learning is to construct an estimator which is able to predict the label of an object given the set of features.\n",
-    "\n",
-    "For the analysis I use two datasets:\n",
-    "1. iTunes music library serves me as a *test dataset*;\n",
+    "In the analysis I use two datasets:\n",
+    "1. iTunes music library serves me as a *test dataset*, or non-labeled data;\n",
     "2. For the *training dataset* I made a csv file ('./labeled_tracks.csv') with hand picked tracks outside of my iTunes library. I labeled each track with one of the three classes: \"cycling\", \"yoga\", \"ballet\". \n",
     "\n",
     "iTunes library files track the media in iTunes. The iTunes library file, a file called iTunes Music Library.xml, is created automatically when you launch iTunes. 'iTunes Music Library.xml' contains information that's stored in the iTunes database of the songs in the library. On Mac OS X, it can be found in the directory 'Users/username/Music/iTunes'. More information about iTunes library files can be found [here](https://support.apple.com/en-us/HT201610).\n",
