--- a/02_Data_Visualisation.ipynb
+++ b/02_Data_Visualisation.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# iTunes music library analysis: Data Visualisation\n",
+    "# 02. Machine Learning for music playlists: Data Visualisation\n",
     "\n",
     "This is the second post in a series of posts devoted to analysis of iTunes music library using Scikit-Learn tools.   \n",
     "This notebook covers visualisation and overview of data I prepared in the [01_Data_preparation](http://localhost:8888/notebooks/01_Data_preparation.ipynb). \n",
