--- a/03_Preprocessing.ipynb
+++ b/03_Preprocessing.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# iTunes music library analysis: Preprocessing Data\n",
+    "# 03. Machine Learning for music playlists: Preprocessing Data\n",
     "\n",
     "This is the third post in a series of posts devoted to analysis of iTunes music library using Scikit-Learn tools.   \n",
     "This notebook covers steps necessary to preprocess data to use it as input for Scikit-learn machine learning algorithms. \n",
