--- a/04_Novelty_detection.ipynb
+++ b/04_Novelty_detection.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# iTunes music library analysis: Novelty Detection\n",
+    "# 04. Machine Learning for music playlists: Novelty Detection\n",
     "This is the 4th post in a series of posts devoted to analysis of iTunes music library using Scikit-Learn tools.   \n",
     "The purpose of the analysis is to detect tracks in my iTunes music library that would suit my fitness practices, which are \"cycling\", \"yoga\", and \"ballet\". To solve that problem I use machine learning classification algorithms.    \n",
     "\n",
@@ -18,9 +18,12 @@
     "* training DB contains 88 tracks labeled with one of the three classes: \"ballet\", \"cycling\", \"yoga\";\n",
     "* test DB contains 444 non-labeled tracks. \n",
     "\n",
-    "The three classes I have in the training set don't cover all classes of music I have in my iTunes music library (test DB). Because of that I can't apply a classification algorithm to the whole test set as it will also assign irrelevant tracks to some class.  \n",
+    "The three classes I have in the training set don't cover all classes of music I have in my iTunes music library (test DB). Because of that I can't apply a classification algorithm to the whole test set as it will also assign irrelevant tracks some class.  \n",
     "\n",
-    "In the following notebook I'm going to identify tracks in the unlabeled dataset that fit classes in the training dataset and eliminate tracks that completely unfit the classes. In the first part, part 'a', of the notebook I will provide the algorithm with the whole training dataset — with the three classes at once — to choose the boundary. In the 'b' part of the notebook I will provide the algorithm only with one class at a time. In the end I will compare the results of both approaches.  \n",
+    "In the following notebook I'm going to identify tracks in the unlabeled dataset that fit classes in the training dataset and eliminate tracks that completely unfit the classes.  \n",
+    "\n",
+    "* In the first part, [part 'a'](http://localhost:8888/notebooks/04_Novelty_detection.ipynb#04a-One-Class-SVM-for-novelty-detection), of the notebook I will provide the algorithm with the whole training dataset — three classes at once — to choose the boundary. \n",
+    "* In the [part 'b'](http://localhost:8888/notebooks/04_Novelty_detection.ipynb#04b.-Novelty-detection-by-one-class) of the notebook I will provide the algorithm only with one class at a time. In the end I will compare the results of both approaches.  \n",
     "\n",
     "As a shortcut, in this notebook I import module \"data_processing\" where I perform steps from the [01_Data_preparation](http://localhost:8888/notebooks/01_Data_preparation.ipynb) and [03_Preprocessing](http://localhost:8888/notebooks/03_Preprocessing.ipynb) notebooks.  \n",
     "I start with importing the modules required in the following notebook."
@@ -60,7 +63,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Preprocessing data"
+    "### Read in data"
    ]
   },
   {
@@ -83,14 +86,14 @@
     "\n",
     "# convert both df's to numpy arrays with standardized features\n",
     "train_std, test_std = prs.standardize_data(prs.convert_df_to_array(train_df), \n",
-    "                                           prs.convert_df_to_array(test_df))\n"
+    "                                           prs.convert_df_to_array(test_df))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 04a One-Class SVM for novelty detection\n",
+    "## 04a. One-Class SVM for novelty detection\n",
     "I use [One-Class SVM](http://scikit-learn.org/stable/modules/generated/sklearn.svm.OneClassSVM.html#sklearn.svm.OneClassSVM) unsupervised algorithm to identify tracks in the unlabeled dataset that fit classes in the training dataset. One-Class SVM is used for novelty detection, that is, given a set of samples (that is, the training set), it will detect the soft boundary of that set so as to classify new points (that is, the test set) as belonging to that set or not. It's important to point out that the algorithm treats the training data as not polluted by outliers.  \n",
     "\n",
     "In this part of the notebook I will provide the algorithm with the whole training dataset — with the three classes at once — to choose the boundary.\n",
@@ -542,9 +545,9 @@
    "metadata": {},
    "source": [
     "### Save data with HDF5\n",
-    "Looking through the Pandas documentation, I came across HDF5. HDF5 allows to treat a local file as a hash and work directly with DataFrames. Very cool. It's trivial to read and write from this file using Pandas.  \n",
+    "Looking through the Pandas documentation, I came across [HDF5](http://pandas.pydata.org/pandas-docs/stable/io.html#io-hdf5). HDF5 allows to treat a local file as a hash and work directly with DataFrames. Very cool. It's trivial to read and write from this file using Pandas.  \n",
     "\n",
-    "I save the standardized training and test set with novelty detection results on disk in the table format. Conceptually a table is shaped very much like a DataFrame, with rows and columns. A table may be appended to in the same or other sessions. In addition, delete & query type operations are supported."
+    "I save the standardized training and test set with novelty detection results on disk in the table format. Conceptually a table is shaped very much like a DataFrame, with rows and columns. A table may be appended to in the same or other sessions. In addition, delete and query type operations are supported."
    ]
   },
   {
@@ -585,6 +588,31 @@
     "# save training df\n",
     "train_std_df.to_hdf('music_data.h5', 'train_std', format='table')\n",
     "\n",
+    "# labels are stored in a separate array\n",
+    "target = prs.target_to_numerical_format(train_df)\n",
+    "pd.Series(target).to_hdf('music_data.h5', 'target')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.io.pytables.HDFStore'>\n",
+      "File path: music_data.h5\n",
+      "/target               series       (shape->[88])                                           \n",
+      "/test_svm             frame_table  (typ->appendable,nrows->444,ncols->12,indexers->[index])\n",
+      "/train_std            frame_table  (typ->appendable,nrows->88,ncols->11,indexers->[index]) \n"
+     ]
+    }
+   ],
+   "source": [
     "# check the result\n",
     "print pd.HDFStore('music_data.h5')"
    ]
@@ -593,7 +621,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Novelty detection by one class\n",
+    "## 04b. Novelty detection by one class\n",
     "As an experiment, I'm going to provide One-Class SVM algorithm not with the whole training data but only with one class at a time. Thus the algorithm will choose in the test set only observations that match that particular class. I will also filter for every class unique inliers that match only that one class.  \n",
     "\n",
     "In the following notebooks I will compare the result of this approach with ML classification algorithms.\n",
@@ -603,15 +631,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'train_std_df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-14-692df0a05c1b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# make Numpy arrays for each class\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mballet\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mprs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconvert_df_to_array\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_std_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mtarget\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mcycling\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mprs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconvert_df_to_array\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_std_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mtarget\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0myoga\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mprs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconvert_df_to_array\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_std_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mtarget\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'train_std_df' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "# labels are stored in a separate array\n",
-    "target = prs.target_to_numerical_format(train_df)\n",
-    "\n",
     "# make Numpy arrays for each class\n",
     "ballet = prs.convert_df_to_array(train_std_df[target == 0])\n",
     "cycling = prs.convert_df_to_array(train_std_df[target == 1])\n",
@@ -758,7 +795,7 @@
    "metadata": {},
    "source": [
     "#### Unique new observations \n",
-    "I want to filter for every class unique new observations that match only that one class. To do that I exclude from the test set observations matching two other classes.   "
+    "I want to filter unique new observations for every class. To do that I exclude from the test set observations matching two other classes.   "
    ]
   },
   {
@@ -1052,9 +1089,6 @@
    ],
    "source": [
     "fig, (ax1, ax2, ax3) = plt.subplots(ncols=3, figsize=(15,4))\n",
-    "# plot_oneclass_svm(svm_model_ballet, ballet_2d, test_ballet, t, ax)\n",
-    "\n",
-    "# plot_oneclass_svm(model, train_data, test_data, plt_title, ax\n",
     "\n",
     "for n,m,ax,d,t in zip(('ballet', 'cycling', 'yoga'), #class labels\n",
     "                        (svm_model_ballet, svm_model_cy, svm_model_yoga), #  model\n",
@@ -1081,9 +1115,11 @@
     "\n",
     "In the first part, part 'a', of the notebook I provided the algorithm with the whole training dataset — with the three classes at once — to choose the boundary. As a result, 289 tracks were chosen from the test set as matching the training set.  \n",
     "\n",
-    "In the 'b' part of the notebook I provided the algorithm only with one class at a time. As a result of this approach only 211 tracks were chosen from the test set as mathcing the training set, among which 67 tracks were identified as belonging to 'ballet' class, 120 tracks — to 'cycling' class, and 24 tracks — to 'yoga' class. \n",
+    "In the 'b' part of the notebook I provided the algorithm only with one class at a time. As a result of this approach only 185 tracks were chosen from the test set as mathcing the training set, where 67 tracks were identified as belonging to 'ballet' class, 120 tracks — to 'cycling' class, and 24 tracks — to 'yoga' class. Some tracks were assigned more than one class.\n",
     "\n",
-    "In the following notebooks I will apply different machine learning classification algorithms to label 288 tracks with one of the three classes — \"cycling\", \"ballet\", and \"yoga\". In the end I will compare the results with predictions made by One-Class SVM algorithm trained with one class at a time."
+    "While working on this analysis I discovered HDF5 format which I'm going to use from now on to store my data instead of sqlite. \n",
+    "\n",
+    "In the following notebooks I will apply different machine learning classification algorithms to label 289 tracks with one of the three classes — \"cycling\", \"ballet\", and \"yoga\". In the end I will compare the results with predictions made by One-Class SVM algorithm trained with one class at a time."
    ]
   }
  ],
