add descriptions and comments

--- a/03_Preprocessing.ipynb
+++ b/03_Preprocessing.ipynb
@@ -9,16 +9,18 @@
     "This is the third post in a series of posts devoted to analysis of iTunes music library using Scikit-Learn tools.   \n",
     "This notebook covers steps necessary to preprocess data to use it as input for Scikit-learn machine learning algorithms. \n",
     "\n",
-    "The previous posts cover the following steps:\n",
-    "1. [00_Summary](http://localhost:8888/notebooks/00_Summary.ipynb) — Summary of this analysis, its goals and methods, installation notes.\n",
-    "2. [01_Data_preparation](http://localhost:8888/notebooks/01_Data_preparation.ipynb) — Data gathering and cleaning.\n",
-    "3. [02_Data_visualisation](http://localhost:8888/notebooks/02_Data_Visualisation.ipynb) — Visualisation and overview of data.\n",
+    "Previous posts cover the following steps:\n",
+    "* [00_Summary](http://localhost:8888/notebooks/00_Summary.ipynb) — Summary of this analysis, its goals and methods, installation notes.\n",
+    "* [01_Data_preparation](http://localhost:8888/notebooks/01_Data_preparation.ipynb) — Data gathering and cleaning.\n",
+    "* [02_Data_visualisation](http://localhost:8888/notebooks/02_Data_Visualisation.ipynb) — Visualisation and overview of data.\n",
     "\n",
     "As a result of previous manipulations I have two databases (DBs): \n",
     "* training DB contains 88 tracks labeled with one of the three classes: \"ballet\", \"cycling\", \"yoga\";\n",
     "* test DB contains 444 non-labeled tracks. \n",
     "\n",
-    "As a shortcut, in this notebook I import module \"data_processing\" where I perform steps from the [01_Data_preparation](http://localhost:8888/notebooks/01_Data_preparation.ipynb) notebook. I start with importing the modules required in the following notebook."
+    "As a shortcut, I import module \"data_processing\" with functions from the [01_Data_preparation](http://localhost:8888/notebooks/01_Data_preparation.ipynb) notebook.  \n",
+    "\n",
+    "I start with importing the modules required in the following notebook."
    ]
   },
   {
