--- a/04_Novelty_detection.ipynb
+++ b/04_Novelty_detection.ipynb
@@ -9,10 +9,10 @@
     "The purpose of the analysis is to detect tracks in my iTunes music library that would suit my fitness practices, which are \"cycling\", \"yoga\", and \"ballet\". To solve that problem I use machine learning classification algorithms.    \n",
     "\n",
     "The previous posts cover the following steps:\n",
-    "1. [00_Summary](http://localhost:8888/notebooks/00_Summary.ipynb) — Summary of this analysis, its goals and methods, installation notes.\n",
-    "2. [01_Data_preparation](http://localhost:8888/notebooks/01_Data_preparation.ipynb) — Data gathering and cleaning.\n",
-    "3. [02_Data_visualisation](http://localhost:8888/notebooks/02_Data_Visualisation.ipynb) — Visualisation and overview of data.\n",
-    "4. [03_Preprocessing](http://localhost:8888/notebooks/03_Preprocessing.ipynb) — Data preprocessing to use it as input for Scikit-learn machine learning algorithms.\n",
+    "* [00_Summary](http://localhost:8888/notebooks/00_Summary.ipynb) — Summary of this analysis, its goals and methods, installation notes.\n",
+    "* [01_Data_preparation](http://localhost:8888/notebooks/01_Data_preparation.ipynb) — Data gathering and cleaning.\n",
+    "* [02_Data_visualisation](http://localhost:8888/notebooks/02_Data_Visualisation.ipynb) — Visualisation and overview of data.\n",
+    "* [03_Preprocessing](http://localhost:8888/notebooks/03_Preprocessing.ipynb) — Data preprocessing to use it as input for Scikit-learn machine learning algorithms.\n",
     "\n",
     "As a result of previous manipulations I have two databases (DBs): \n",
     "* training DB contains 88 tracks labeled with one of the three classes: \"ballet\", \"cycling\", \"yoga\";\n",
@@ -25,7 +25,7 @@
     "* In the first part, [part 'a'](http://localhost:8888/notebooks/04_Novelty_detection.ipynb#04a-One-Class-SVM-for-novelty-detection), of the notebook I will provide the algorithm with the whole training dataset — three classes at once — to choose the boundary. \n",
     "* In the [part 'b'](http://localhost:8888/notebooks/04_Novelty_detection.ipynb#04b.-Novelty-detection-by-one-class) of the notebook I will provide the algorithm only with one class at a time. In the end I will compare the results of both approaches.  \n",
     "\n",
-    "As a shortcut, in this notebook I import module \"data_processing\" where I perform steps from the [01_Data_preparation](http://localhost:8888/notebooks/01_Data_preparation.ipynb) and [03_Preprocessing](http://localhost:8888/notebooks/03_Preprocessing.ipynb) notebooks.  \n",
+    "As a shortcut, in this notebook I import module \"data_processing\" with functions from the [01_Data_preparation](http://localhost:8888/notebooks/01_Data_preparation.ipynb) and [03_Preprocessing](http://localhost:8888/notebooks/03_Preprocessing.ipynb) notebooks.  \n",
     "I start with importing the modules required in the following notebook."
    ]
   },
