--- a/00_Overview.ipynb
+++ b/00_Overview.ipynb
@@ -12,7 +12,7 @@
     "### 1. Analysis overview\n",
     "This is a series of posts devoted to analysis of iTunes music library using **[Scikit-Learn](http://scikit-learn.org)** tools and the **[Echo Nest API](http://the.echonest.com/)**.\n",
     "\n",
-    "The purpose of the analysis is to detect tracks in my iTunes music library that would suit my fitness practices, which are \"cycling\", \"yoga\", and \"ballet\". Thus, I have two very different classes of songs: meditative music for yoga and energetic music for cycling, and one more alike class — \"ballet\" — that might float between the other two classes.\n",
+    "The purpose of the analysis is to detect tracks in my iTunes music library that would suit my fitness practices, which are \"cycling\", \"yoga\", and \"ballet\". Thus, I have two very different classes of songs: meditative music for yoga and energetic music for cycling, and one more alike class — \"ballet\" — that might drift between the other two classes.\n",
     "\n",
     "### 2. Goals\n",
     "2.1. Build music playlists from tracks in my iTunes music library for my fitness practices.\n",
@@ -30,15 +30,15 @@
     "\n",
     "### 3. Contents\n",
     "The series of posts includes the following notebooks:  \n",
-    "* [00_Overview](http://localhost:8888/notebooks/00_Overview.ipynb) — Overview of the analysis, its goals and methods, installation notes.  \n",
-    "* [01_Data_preparation](http://localhost:8888/notebooks/01_Data_preparation.ipynb) — Data gathering and cleaning.  \n",
-    "* [02_Data_visualisation](http://localhost:8888/notebooks/02_Data_Visualisation.ipynb) — Visualisation and overview of data.  \n",
-    "* [03_Preprocessing](http://localhost:8888/notebooks/03_Preprocessing.ipynb) — Data preprocessing to use it as input for Scikit-learn machine learning algorithms.  \n",
-    "* [04_Novelty_detection](http://localhost:8888/notebooks/04_Novelty_detection.ipynb) — One-Class SVM algorithm to identify matching tracks in the unlabeled dataset.  \n",
-    "* [05_kNN_classifier](http://localhost:8888/notebooks/05_kNN_classifier.ipynb) — k-Nearest Neighbors classifier.\n",
-    "* [06_Random_forest_classifier](http://localhost:8888/notebooks/06_Random_forest_classifier.ipynb#) — Random Forest classifier.\n",
-    "* [07_SVC](http://localhost:8888/notebooks/07_SVC.ipynb) — Support Vector Machine classifier.\n",
-    "* [08_Summary](http://localhost:8888/notebooks/08_Summary.ipynb) — Summary of the analysis where I compare the performance of all applied classification techniques.\n",
+    "* [00_Overview](https://github.com/Tykovka/itunes-music-analysis/blob/master/00_Overview.ipynb) — Overview of the analysis, its goals and methods, installation notes.  \n",
+    "* [01_Data_preparation](https://github.com/Tykovka/itunes-music-analysis/blob/master/01_Data_preparation.ipynb) — Data gathering and cleaning.  \n",
+    "* [02_Data_visualisation](https://github.com/Tykovka/itunes-music-analysis/blob/master/02_Data_Visualisation.ipynb) — Visualisation and overview of data.  \n",
+    "* [03_Preprocessing](https://github.com/Tykovka/itunes-music-analysis/blob/master/03_Preprocessing.ipynb) — Data preprocessing to use it as input for Scikit-learn machine learning algorithms.  \n",
+    "* [04_Novelty_detection](https://github.com/Tykovka/itunes-music-analysis/blob/master/04_Novelty_detection.ipynb) — One-Class SVM algorithm to identify matching tracks in the non-labelled dataset.  \n",
+    "* [05_kNN_classifier](https://github.com/Tykovka/itunes-music-analysis/blob/master/05_kNN_classifier.ipynb) — k-Nearest Neighbors classifier.\n",
+    "* [06_Random_forest_classifier](https://github.com/Tykovka/itunes-music-analysis/blob/master/06_Random_forest_classifier.ipynb) — Random Forest classifier.\n",
+    "* [07_SVC](https://github.com/Tykovka/itunes-music-analysis/blob/master/07_SVC.ipynb) — Support Vector Machine classifier.\n",
+    "* [08_Summary](https://github.com/Tykovka/itunes-music-analysis/blob/master/08_Summary.ipynb) — Summary of the analysis where I compare the performance of all applied classification techniques.\n",
     "  \n",
     "\n",
     "### 4. Installation notes\n",
@@ -52,7 +52,6 @@
     "* seaborn version 0.7.0 or later: https://stanford.edu/~mwaskom/software/seaborn/#\n",
     "* pyechonest version 9.0.0 or later: https://github.com/echonest/pyechonest\n",
     "* pyItunes library: https://github.com/liamks/pyitunes\n",
-    "* sqlitedict library: https://github.com/piskvorky/sqlitedict\n",
     "* HDF5 requires several libraries, detailed instructions for installation can be found in [this blog post](http://rustyrazorblade.com/2014/11/getting-started-with-pandas-and-hdf5/). \n",
     "\n",
     "### 5. Notebook listing\n",
