remove my echo nest api key

--- a/01_Data_preparation.ipynb
+++ b/01_Data_preparation.ipynb
@@ -80,7 +80,7 @@
     "from pyechonest import config\n",
     "\n",
     "# pass my API key\n",
-    "config.ECHO_NEST_API_KEY=\"1RNDIJ5SITBKZFDCT\""
+    "config.ECHO_NEST_API_KEY=\"MY_API_KEY\""
    ]
   },
   {
