--- a/04_Novelty_detection.ipynb
+++ b/04_Novelty_detection.ipynb
@@ -12,7 +12,7 @@
     "* [00_Overview](https://github.com/Tykovka/itunes-music-analysis/blob/master/00_Overview.ipynb) — Overview of the analysis, its goals and methods, installation notes.  \n",
     "* [01_Data_preparation](https://github.com/Tykovka/itunes-music-analysis/blob/master/01_Data_preparation.ipynb) — Data gathering and cleaning.  \n",
     "* [02_Data_visualisation](https://github.com/Tykovka/itunes-music-analysis/blob/master/02_Data_Visualisation.ipynb) — Visualisation and overview of data.  \n",
-    "* [03_Preprocessing](https://github.com/Tykovka/itunes-music-analysis/blob/master/03_Preprocessing.ipynb) — Data preprocessing to use it as input for Scikit-learn machine learning algorithms. \n",
+    "* [03_Preprocessing](https://github.com/Tykovka/itunes-music-analysis/blob/master/03_Preprocessing.ipynb) — Data preprocessing to use it as input for Scikit-learn ML algorithms. \n",
     "\n",
     "As a result of the above manipulations I have two datasets: \n",
     "* training set contains 143 tracks labelled with one of the three classes: \"ballet\", \"cycling\", \"yoga\";\n",
@@ -55,7 +55,7 @@
    "metadata": {},
    "source": [
     "#### Read in data\n",
-    "In this notebook I use preprocessed data, which are numpy arrays of standardised data.  \n",
+    "In this notebook, I use preprocessed data, which are numpy arrays of standardised data.  \n",
     "I store data in HDF5 file format. To read it I use h5py library."
    ]
   },
